--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -21,7 +21,7 @@
     <h1>Hello, Kafka</h1>
     <p>This page shows the last 10 messages sent to Kafka on the "messages" topic.</p>
     <p>To send a message, simply curl the endpoint of this app:</p>
-    <pre>curl -X POST {{ .baseurl }}/messages -d "$(fortune)"</pre>
+    <pre>curl -X POST {{ .baseurl }}/messages -d 'message1'</pre>
     <table class="messages table">
     </table>
 
