--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -8,23 +8,35 @@
     <title>Welcome to Heroku Kafka</title>
 
     <!-- Bootstrap -->
-    <link href="public/css/bootstrap.min.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Hello, Kafka</h1>
-    <p>
-      This page shows the last 10 messages sent to Kafka on the "messages"
-      topic.
-    </p>
-    <p>To send a message, simply curl the endpoint of this app:</p>
-    <pre>curl -X POST {{ .baseurl }}/messages/{{ .topic }} -d 'message1'</pre>
-    <table class="messages table"></table>
+    <container class="d-flex flex-column min-vh-100 align-items-center">
+      <h1>Hello, Kafka</h1>
+      <p>
+        This page shows the last 10 messages sent to Kafka on the "messages"
+        topic.
+      </p>
+      <p>To send a message, simply curl the endpoint of this app:</p>
+      <pre>curl -X POST {{ .baseurl }}/messages/{{ .topic }} -d 'message1'</pre>
+      <container
+        class="d-flex flex-column justify-content-center"
+        style="min-width: 80vw"
+      >
+        <table class="messages table table-striped"></table>
+      </container>
+    </container>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="public/js/bootstrap.min.js"></script>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <!-- app code here -->
     <script src="public/js/index.js"></script>
   </body>
